--- a/app/src/main/res/layout/activity_encuesta.xml
+++ b/app/src/main/res/layout/activity_encuesta.xml
@@ -29,7 +29,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pizza"
+                android:text="a. Pizza"
                 android:id="@+id/P1radioButton1"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentTop="true"
@@ -40,7 +40,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hamburguesa"
+                android:text="b. Hamburguesa"
                 android:id="@+id/P1radioButton2"
                 android:layout_below="@+id/radioButton"
                 android:layout_centerHorizontal="true"
@@ -50,7 +50,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chino"
+                android:text="c. Chino"
                 android:id="@+id/P1radioButton3"
                 android:layout_below="@+id/radioButton2"
                 android:layout_centerHorizontal="true"
@@ -60,7 +60,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mexicano "
+                android:text="d. Mexicano "
                 android:id="@+id/P1radioButton4"
                 android:layout_below="@+id/radioButton3"
                 android:layout_centerHorizontal="true"
@@ -76,7 +76,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pregunta 1"
+            android:text="Pregunta 2"
             android:id="@+id/lblPregunta2"/>
 
 
@@ -90,7 +90,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pizza"
+                android:text="a. Pizza"
                 android:id="@+id/P2radioButton1"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentTop="true"
@@ -101,7 +101,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hamburguesa"
+                android:text="b. Hamburguesa"
                 android:id="@+id/P2radioButton2"
                 android:layout_below="@+id/radioButton"
                 android:layout_centerHorizontal="true"
@@ -111,7 +111,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chino"
+                android:text="c. Chino"
                 android:id="@+id/P2radioButton3"
                 android:layout_below="@+id/radioButton2"
                 android:layout_centerHorizontal="true"
@@ -121,7 +121,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mexicano "
+                android:text="d. Mexicano "
                 android:id="@+id/P2radioButton4"
                 android:layout_below="@+id/radioButton3"
                 android:layout_centerHorizontal="true"
@@ -151,7 +151,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pizza"
+                android:text="a. Pizza"
                 android:id="@+id/P3radioButton1"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentTop="true"
@@ -162,7 +162,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hamburguesa"
+                android:text="b. Hamburguesa"
                 android:id="@+id/P3radioButton2"
                 android:layout_below="@+id/radioButton"
                 android:layout_centerHorizontal="true"
@@ -172,7 +172,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chino"
+                android:text="c. Chino"
                 android:id="@+id/P3radioButton3"
                 android:layout_below="@+id/radioButton2"
                 android:layout_centerHorizontal="true"
@@ -182,7 +182,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mexicano "
+                android:text="d. Mexicano "
                 android:id="@+id/P3radioButton4"
                 android:layout_below="@+id/radioButton3"
                 android:layout_centerHorizontal="true"
@@ -212,7 +212,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pizza"
+                android:text="a. Pizza"
                 android:id="@+id/P4radioButton1"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentTop="true"
@@ -223,7 +223,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hamburguesa"
+                android:text="b. Hamburguesa"
                 android:id="@+id/P4radioButton2"
                 android:layout_below="@+id/radioButton"
                 android:layout_centerHorizontal="true"
@@ -233,7 +233,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chino"
+                android:text="c. Chino"
                 android:id="@+id/P4radioButton3"
                 android:layout_below="@+id/radioButton2"
                 android:layout_centerHorizontal="true"
@@ -243,7 +243,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mexicano "
+                android:text="d. Mexicano "
                 android:id="@+id/P4radioButton4"
                 android:layout_below="@+id/radioButton3"
                 android:layout_centerHorizontal="true"
@@ -272,7 +272,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pizza"
+                android:text="a. Pizza"
                 android:id="@+id/P5radioButton1"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentTop="true"
@@ -283,7 +283,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hamburguesa"
+                android:text="b. Hamburguesa"
                 android:id="@+id/P5radioButton2"
                 android:layout_below="@+id/radioButton"
                 android:layout_centerHorizontal="true"
@@ -293,7 +293,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chino"
+                android:text="c. Chino"
                 android:id="@+id/P5radioButton3"
                 android:layout_below="@+id/radioButton2"
                 android:layout_centerHorizontal="true"
@@ -303,7 +303,7 @@
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mexicano "
+                android:text="d. Mexicano "
                 android:id="@+id/P5radioButton4"
                 android:layout_below="@+id/radioButton3"
                 android:layout_centerHorizontal="true"
