--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -9,7 +9,8 @@
 
     <ImageView
         android:layout_width="300dp"
-        android:layout_height="300dp" />
+        android:layout_height="300dp"
+        android:background="@drawable/startagrocol"/>
 
     <TextView
         android:layout_width="300dp"
