--- a/app/src/main/res/layout/activity_encuesta.xml
+++ b/app/src/main/res/layout/activity_encuesta.xml
@@ -450,7 +450,8 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/button"
             android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:layout_marginBottom="15dp"/>
 
 
 
